# froggy

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  froggy-config.cmake.in  froggy.cpp
test/: CMakeLists.txt  unit_test.cpp
